# fyp-lightweight-renderer

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: main.cpp
src/core/: Paths.hpp
src/core/app/: GuiManager.cpp  GuiManager.hpp  InputHandler.cpp  InputHandler.hpp  Viewer.cpp  Viewer.hpp
src/core/framegraph/: FrameGraph.cpp  FrameGraph.hpp  PassBuilder.hpp  ResourceRegistry.cpp  ResourceRegistry.hpp
src/core/loaders/: GltfLoader.cpp  GltfLoader.hpp  Loader.hpp  LoaderUtils.cpp  LoaderUtils.hpp  Material.hpp  MeshSequence.hpp  ObjLoader.cpp  ObjLoader.hpp
src/core/passes/: fullscreen.vert
src/core/passes/ambientocclusion/: AmbientOcclusionPass.cpp  AmbientOcclusionPass.hpp  deinterleave.comp  hbao.comp  hbao.frag  hbao_blur.comp  interleave.comp
src/core/passes/final/: FinalPass.cpp  FinalPass.hpp  final.frag
src/core/passes/geometry/: GeometryPass.cpp  GeometryPass.hpp  geometry.frag  geometry.vert
src/core/passes/ibl/: IblPass.cpp  IblPass.hpp  hdritocubemap.comp  irradiance.comp  prefilter.comp
src/core/passes/imgui/: ImguiPass.cpp  ImguiPass.hpp
src/core/passes/pbr/: PbrPass.cpp  PbrPass.hpp  pbr.frag
src/core/passes/utility/: geometry.glslh  quaternion.glslh
src/core/pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  Pipeline.hpp
src/core/scene/: Camera.hpp  Component.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  SceneObject.hpp  StaticMesh.hpp  Transform.hpp
src/core/upload/: CameraUploader.cpp  CameraUploader.hpp  LightUploader.cpp  LightUploader.hpp  MaterialUploader.cpp  MaterialUploader.hpp  MeshUploader.cpp  MeshUploader.hpp
src/core/utility/: ImageLoader.cpp  ImageLoader.hpp
src/core/vulkan/: Allocator.cpp  Allocator.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorAllocator.cpp  DescriptorAllocator.hpp  Renderer.cpp  Renderer.hpp  ShaderLoader.cpp  ShaderLoader.hpp  Swapchain.cpp  Swapchain.hpp  VkFormatUtils.hpp  VulkanContext.cpp  VulkanContext.hpp
src/core/window/: Window.cpp  Window.hpp
